Updated version of dependencies

--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -10,8 +10,8 @@
     "transpile": "babel src -d dist --copy-files"
   },
   "dependencies": {
-    "react": "16.3.2",
-    "react-dom": "16.3.2",
+    "react": "^16.8.1",
+    "react-dom": "^16.8.1",
     "react-scripts": "3.0.1"
   },
   "eslintConfig": {
