init mono-repos source

--- a/package.json
+++ b/package.json
@@ -1,8 +1,21 @@
 {
   "name": "root",
   "private": true,
+  "scripts": {
+    "bootstrap": "lerna bootstrap",
+    "build": "tsc -b packages/x-core packages/x-cli",
+    "test": "lerna run test",
+    "clean": "rimraf packages/**/lib"
+  },
   "devDependencies": {
-    "@babel/preset-react": "^7.0.0",
-    "lerna": "^3.13.4"
-  }
+    "@types/node": "^8.0.28",
+    "ava": "^0.22.0",
+    "lerna": "^2.9.0",
+    "rimraf": "^2.6.2",
+    "typescript": "~3.0.0",
+    "@babel/preset-react": "^7.0.0"
+  },
+  "workspaces": [
+    "packages/*"
+  ]
 }
